# Thesis

./: .gitignore  DATA.md  pyproject.toml  readme.md
configs/: lora_usdc_3topics_final_eval_debug.json  lora_usdc_3topics_final_eval_final.json  lora_usdc_3topics_final_eval_smoke_test.json  lora_usdc_3topics_final_models_debug.json  lora_usdc_3topics_final_models_smoke_test.json  prompting_debug.json  prompting_ollama_debug.json  prompting_ollama_judge_debug.json  prompting_ollama_judge_smoke_test.json  prompting_ollama_smoke_test.json  prompting_usdc_3topics_final_eval_debug.json  prompting_usdc_3topics_final_eval_final.json  prompting_usdc_3topics_final_eval_smoke_test.json  prompting_usdc_3topics_final_models_debug.json  prompting_usdc_3topics_final_models_smoke_test.json  prompting_usdc_3topics_ollama_judge_debug.json  prompting_usdc_3topics_ollama_judge_smoke_test.json  prompting_usdc_ollama_judge_debug.json  rag_mock_debug.json  rag_ollama_judge_debug.json  rag_ollama_judge_smoke_test.json  rag_usdc_faiss_3topics_final_eval_debug.json  rag_usdc_faiss_3topics_final_eval_final.json  rag_usdc_faiss_3topics_final_eval_smoke_test.json  rag_usdc_faiss_3topics_final_models_debug.json  rag_usdc_faiss_3topics_final_models_smoke_test.json  rag_usdc_faiss_3topics_ollama_judge_debug.json  rag_usdc_faiss_3topics_ollama_judge_smoke_test.json  rag_usdc_faiss_mock_debug.json  rag_usdc_faiss_ollama_judge_debug.json  rag_usdc_faiss_ollama_judge_smoke_test.json  rag_usdc_mock_debug.json  rag_usdc_ollama_judge_debug.json  rag_usdc_ollama_judge_smoke_test.json
src/: config.py
(+319 files in other folders)
