[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-debate-pipeline"
version = "0.1.0"
description = "LLM debate stance preservation experiment pipeline"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
